Fixing the CSS view button to be aligned with the Edit

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -145,6 +145,9 @@ hr{
     height: 40px;
     border: none;
     box-shadow: none;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
   button{
     background-color: $teal;
